# msrs

./: Cargo.toml  README.md  build.rs
.github/: copilot-instructions.md
src/: lib.rs  main.rs
src/metalsupermarkets/: api_client.rs  mod.rs  models.rs  scraper.rs
